--- a/app/pages/music/music.css
+++ b/app/pages/music/music.css
@@ -145,26 +145,63 @@
 	width: 100%;
 }
 /*向上滑动*/
+
 .swiper-up{
 	width: 34px;
 	height: 24px;
 	display: flex;
 	align-items: center;
-	background-color: red;
-	position: fixed;
+	/*background-color: red;*/
+	position: absolute;
 	bottom: 40px;
-	left: 200px;
+	left: 190px;
+	/*overflow: hidden;*/
+	animation: touchup 1.4s 0s infinite ease-in-out;
 }
-.pre-box1,.pre-box1{
+.pre-box1,.pre-box2{
 	width: 50%;
 	height: 100%;
-	opacity: 0;
+	opacity: 1;
+	overflow: hidden;
 }
 .pre-box1-inner,.pre-box2-inner{
 	position: absolute;
 	top: 4px;
+	width: 70%;
+	height: 10px;
+	background-color: #FFFFFF;
+}
+.pre-box1-inner{
+	transform: rotate(130deg);
+	left: 1px;
+}
+.pre-box2-inner{
+	transform: rotate(50deg);
+	left: 13px;
+}
+@keyframes touchup{
+	0%,30%{
+		transform: translate(0,10px);
+		opacity: 0;
+	}
+	60%{
+		transform: translate(0,0);
+		opacity: 1;
+	}
+	100%{
+		transform: translate(0,-8px);
+	}
+}
+.go-home{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 44px;
+	height: 44px;
+}
+.go-home a,.go-home a img{
 	width: 100%;
-	height: 16px;
+	height: 100%;
 }
 
 
