--- a/app/pages/music/music.css
+++ b/app/pages/music/music.css
@@ -203,6 +203,21 @@
 	width: 100%;
 	height: 100%;
 }
+.music-anim section{
+	opacity: 0;
+	transform-origin: center bottom 0px;
+	z-index: 0;
+	display: none;
+	transform: scale(1);
+	transition: none;
+}
+.music-anim section.mu-move{
+	opacity: 1;
+	z-index: 1;
+	display: block;
+	transform: translateY(0px);
+	transition: transform 0.6s linear;
+}
 
 
 
